[tool.poetry]
name = "srs-format"
version = "0.2.0.dev3"
description = "An alternative to Anki's *.apkg, that is non-zipped peewee SQLite, and self-contained for all media, allowing for easier programming"
authors = ["Pacharapol Withayasakpunt <patarapolw@gmail.com>"]
license = "MIT"
repository = "https://github.com/patarapolw/srs-format"
homepage = "https://github.com/patarapolw/srs-format"

[tool.poetry.dependencies]
python = "*"
peewee = "^3.7"

[tool.poetry.dev-dependencies]
